# dotfiles

./: .gitignore  .gitmodules  .lfsconfig  Cargo.toml  Cross.toml  Manifest  build.rs  build.sh  emacsclient.py  emacsclient.sh  fish.py  gitconfig  gitignore_global  install.py  install.sh  lfs-fetch.py  link-auth-sock.py  merge-submodules.sh  parse-git-status.c  passacre.yaml  plugins.capnp  rustfmt.toml  update.sh  word-list  zshrc
.github/workflows/: build.yml
_cross-builder/: Dockerfile
bin-Darwin-x86_64/: hab-prompt-utils
bin-FreeBSD-amd64/: hab-prompt-utils
bin-Linux-x86_64/: hab-prompt-utils
emacs.d/: .bzrignore  .emacs  .gitignore  .gitmodules  color-theme-twilight.el  delete-all-whitespace.el  emacs  emacs.org  emacsclient-magit.el  moccur.el  packages.txt  pycheckers.py  remote-emacsclient.el
emacs.d/compy-specific/: osx.el
emacs.d/lisp/: flycheck-jsx.el  parsley-mode.el
emacs.d/mmm-mako/: .hgignore  .hgtags  CHANGES  README  mmm-mako.el
fish/: fish.py
gitconfig.d/: 001N-user.conf  002N-general.conf  005N-osx.conf  010N-lfs.conf
irssi/: dbm.theme  default.theme  hab.theme
irssi/scripts/: adv_windowlist.pl  auto_otr.py  email_hilight.py  hlscroll.pl  lastfm.py  notesay.pl  notesay.py  quiet.pl  trackbar.pl
irssi/scripts/autorun/: autowhois_simple.pl  hlscroll.pl  quiet.pl  topic-diff.pl
iterm2/: com.googlecode.iterm2.plist
lfs-Darwin-x86_64/: hab-prompt-utils
lfs-FreeBSD-amd64/: hab-prompt-utils
lfs-Linux-armv6l/: hab-prompt-utils
lfs-Linux-x86_64/: hab-prompt-utils
oh-my-zsh/: parse-git-status.c
oh-my-zsh/helper-bins/: .gitattributes  .gitignore  Cargo.toml  build.rs  build.sh  lfs-Linux-armv7l  plugins.capnp  rustfmt.toml
oh-my-zsh/helper-bins/bin-Darwin-x86_64/: hab-prompt-utils
oh-my-zsh/helper-bins/bin-FreeBSD-amd64/: hab-prompt-utils
oh-my-zsh/helper-bins/lfs-Darwin-arm64/: hab-prompt-utils
oh-my-zsh/helper-bins/lfs-Darwin-x86_64/: hab-prompt-utils
oh-my-zsh/helper-bins/lfs-FreeBSD-amd64/: hab-prompt-utils
oh-my-zsh/helper-bins/lfs-Linux-aarch64/: hab-prompt-utils
oh-my-zsh/helper-bins/lfs-Linux-armv6l/: hab-prompt-utils
oh-my-zsh/helper-bins/lfs-Linux-x86_64/: hab-prompt-utils
oh-my-zsh/helper-bins/src/: colors.rs  directories.rs  durations.rs  errors.rs  installer.rs  lib.rs  plugin.rs  plugins.rs  ssh_proxy.rs  term.rs  utils.rs  vc.rs
oh-my-zsh/themes/: hab.zsh-theme
plugins/passacre/: _passacre
src/: _plugins_capnp.rs  colors.rs  directories.rs  durations.rs  error.rs  errors.rs  installer.rs  lib.rs  plugin.rs.in  plugin_types.rs  plugins.rs  ssh_proxy.rs  term.rs  utils.rs  vc.rs
ssh_config.d/: 000N-preamble  001N-ssh-proxy.conf
tmux.conf.d/: 001N-basics.conf
workflows/: build.yml
