[package]
name = "helper-bins"
version = "0.1.0"
authors = ["hab <_@habnab.it>"]
publish = false
edition = "2021"

[profile.release]
lto = true
panic = 'abort'

[features]

[dependencies]
ansi_term = "~0.11"
async-trait = "0.1.53"
blake2 = "^0.8.1"
byteorder = "*"
clap = {version = "*", features = ["unstable"]}
dirs = "^2.0.2"
hsl = "*"
lazy_static = "*"
rand = "^0.7.3"
rand_chacha = "^0.2.1"
regex = "*"
serde_json = "*"
tempfile = "^2.2.0"
thiserror = "1.0.31"
tokio = { version = "1", features = ["full"] }
whoami = "1.1.3"

# maybe later
# git2 = {version = "0.4.3", default-features = false}

[dev-dependencies]
