[package]
name = "helper-bins"
version = "0.1.0"
authors = ["hab <_@habnab.it>"]
publish = false
edition = "2021"

[profile.release]
lto = true

[features]

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.57"
async-trait = "0.1.53"
blake2 = "0.10.4"
clap = {version = "3.1.17", features = ["derive"]}
hsl = "0.1.1"
lazy_static = "1.4.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
regex = "1.5.5"
serde_json = "1.0.81"
tempfile = "3.3.0"
thiserror = "1.0.31"
tokio = { version = "1.18.1", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["json", "env-filter"] }
whoami = "1.1.3"
futures-util = { version = "0.3", features = ["sink"] }

# maybe later
# git2 = {version = "0.4.3", default-features = false}

[dev-dependencies]
