[package]
name = "helper-bins"
version = "0.1.0"
authors = ["Aaron Gallagher <_@habnab.it>"]
build = "build.rs"
publish = false

[features]

[dependencies]
ansi_term = "*"
byteorder = "*"
capnp = "*"
capnp-rpc = "*"
clap = {version = "*", features = ["unstable"]}
futures = "*"
hsl = "*"
lazy_static = "*"
rand = "*"
regex = "*"
serde_json = "*"
sha1 = "*"
tempfile = "*"
tokio-core = "*"
tokio-process = "*"

# maybe later
# git2 = {version = "0.4.3", default-features = false}

[dependencies.tokio-service]
git = "https://github.com/tokio-rs/tokio-service"

[build-dependencies]
capnpc = "*"

[dev-dependencies]
fnconcat = "*"
